# war3-battle-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODOS.md  WINDOWS_INTEGRATION.md
.claude/skills/quality/: SKILL.md
.github/ISSUE_TEMPLATE/: defect.yml  feature-gap.yml  tech-debt.yml  test-infra.yml
.github/workflows/: ci.yml
crates/client/: Cargo.toml  build.rs
crates/client/src/: app.rs  cmd_sender.rs  config.rs  logging.rs  main.rs
crates/client/src/net/: discovery.rs  mod.rs  npcap_sender.rs  packet.rs  quic.rs  tunnel.rs
crates/client/src/ui/: lobby.rs  log_panel.rs  mod.rs  npcap_check.rs  settings.rs  setup_wizard.rs  timeline.rs
crates/client/tests/: config_test.rs  swap_poc.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: addr_safety.rs  lib.rs  messages.rs  war3.rs
crates/protocol/tests/: messages_test.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  state.rs  tunnel.rs  ws.rs
crates/server/tests/: e2e_test.rs  state_test.rs
crates/spike-packet/: Cargo.toml
crates/spike-packet/src/: main.rs
crates/spike-quic/: Cargo.toml
crates/spike-quic/src/: main.rs
crates/spike-raw-udp/: Cargo.toml
crates/spike-raw-udp/src/: main.rs
docs/: SELF-HOSTING.md
quality/: README.md  backlog-audit.md  defect-taxonomy.md  discovery-strategy.md  et-charter-template.md  quality-system-design-notes.md
quality/et-sessions/: 2026-05-16-network-disruption.md  2026-05-16-rapid-input.md
web/join/: index.html
