[package]
name = "war3-client"
version.workspace = true
edition.workspace = true

[dependencies]
war3-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eframe = "0.31"
dirs = "6"
futures-util = "0.3"
tokio-tungstenite = "0.26"
chrono = "0.4"
open = "5"
igd-next = "0.15"
