[package]
name = "war3-client"
version.workspace = true
edition.workspace = true

[dependencies]
war3-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eframe = "0.31"
dirs = "6"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
chrono = "0.4"
open = "5"
quinn = "0.11"
rcgen = "0.13"
igd-next = { version = "0.15", features = ["aio_tokio"] }
