[package]
name = "war3-server"
version.workspace = true
edition.workspace = true

[dependencies]
war3-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
