[package]
name = "war3-server"
version.workspace = true
edition.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"

[dependencies]
war3-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
futures-util = "0.3"
